--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@
 
 version: 2
 updates:
-  - package-ecosystem: "gomod" # See documentation for possible values
+  - package-ecosystem: "gomod" # See documentation for possible values comment
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
